# document-formatter

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  _tmp_utf8_test.py  docker-compose.yaml  main.py  pipeline.py  pyproject.toml  requirements-docker.txt  run.sh  utilities.py
app/: main.py
core/: agents.py  llm.py
logs/: 20260319_194038_table_errors_demo.json  20260319_194231_table_errors_demo.json  20260319_195323_table_errors_demo.json  20260319_200749_244_5.json  20260319_200900_244_5.json  20260319_200917_244_5.json  20260319_210908_logical_consistency_agent_demo.json  20260319_212031_logical_consistency_agent_demo.json  20260319_213118_logical_consistency_agent_demo.json  20260319_213258_logical_consistency_agent_demo.json  20260319_213319_logical_consistency_agent_demo.json  20260319_214142_logical_consistency_agent_demo.json  20260319_214206_logical_consistency_agent_demo.json  20260319_215401_logical_consistency_agent_demo.json  20260319_215540_logical_consistency_agent_demo.json  20260319_220915_logical_consistency_agent_demo.json
logs_test_runtime/: 20260319_195233_api_doc_log_1.json  20260319_195234_api_doc_1.json  20260319_195234_api_doc_2.json  20260319_195234_api_doc_docx_fallback.json  20260319_195234_apply_docx_1.json
pipeline/: pipeline.py
scripts/: run_demo_documents.py  test_rag_retrieval.py
store/: engine.py  entity_extractor.py  graph.py  vector_store.py
templates/: index.html
tests/: test_analysis_api.py  test_analysis_logging.py  test_demo_documents.py  test_document_fixer.py  test_local_provider.py  (+6 more)
(+64 files in other folders)
