[project]
name = "document-formatter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "fastapi>=0.129.2",
    "gunicorn>=25.1.0",
    "jinja2>=3.1.6",
    "llama-index>=0.14.15",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
